2003-09-14: cvs - Roberto Ragusa
   . Ooops, forgot to activate the polling on 6100L.

2003-09-10: cvs - Hin-Tak Leung
   . Added prelimary null transport skeleton code to debug bid problems.

2003-09-08: cvs - Roberto Ragusa
   . Added epl_61interpret.c.
   . First attempt to do (free mem) flow control on 6100L.

2003-09-04: cvs - Roberto Ragusa
   . Unified all sleeping functions into sleep_seconds(double s).
   . We try to accurately detect how big is the buffer of the printer
     (this will be useful for future enhancements).
   . Flow control is now more cleanly integrated. At the moment
     there are two speed limiters: a stripe to stripe delay
     (used only for 5700L) and a closed-loop free mem delay
     (5800L, 5900L only; it should work for 5700L too but it's
     disabled because htl doesn't want it :-) ).
   . The free mem flow control now uses a better estimation
     algorithm.
   . Small misc fixes (code style, debug output).
   . Added epl_time.c, a lot of code has been moved around.

2003-07-18: cvs - Hin-Tak Leung
   . fixing the autoconf code to detect correctly kernel versions of the form
     "2.4.21-0.13mdk" (extra dot) reported for mandrake 9.x.  

2003-05-07: cvs - Roberto Ragusa
   . Small fixes.

2003-05-04: cvs - Roberto Ragusa
   . Misc fixes to epl_59interpret.c, epl_bid_replies.c and docs.
   . Added README.FlowControl.

2003-05-04: cvs - Hin-Tak Leung
   . 2nd try at fixing libieee1284 memory allocation problem, + misc.

2003-05-02: cvs - Hin-Tak Leung
   . fix libieee1284 memory allocation problem.

2003-05-01: cvs - Roberto Ragusa
   . Foomatic fixes again, created installation scripts.

2003-04-30: cvs - Roberto Ragusa
   . Misc foomatic fixes.

2003-04-28: cvs - Hin-Tak Leung
   * Changed "--with-kerneldevice" to "--with-kernelusb" for configure. 
   . Also changed all "HAVE_KERNEL_DEVICE" to "HAVE_KERNEL_USB_DEVICE" 
        internally.

2003-04-27: cvs - Roberto Ragusa
   . New options added to foomatic and ps2epl.