@@ -46,7 +46,7 @@ int epl_page_footer(EPL_job_info *epl_job_info)
       ts += epl_sprintf_wrap(ts, 2);
       ts += sprintf(ts, "%c%c",0x05,0x00);
     }
-  else if(epl_job_info->model == MODEL_6100L)
+  else if((epl_job_info->model == MODEL_6100L) || (epl_job_info->model == MODEL_6200L))
     {
       ts += epl_sprintf_wrap(ts, 2);
       ts += sprintf(ts, "G%c",0x00);
