@@ -172,7 +172,7 @@ int epl_status(int argc, char **argv)
       ts += epl_sprintf_wrap(ts, 2);
       ts += sprintf(ts, "%c%c",0x11,0x00);
     }
-  else if(epl_job_info->model == MODEL_6100L)
+  else if((epl_job_info->model == MODEL_6100L) || (epl_job_info->model == MODEL_6200L))
     {
       ts += epl_sprintf_wrap(ts, 2);
       ts += sprintf(ts, "@%c",0x00);
