@@ -31,6 +31,10 @@
       <driver>epl6100l</driver>
       <arg_defval>ev/1000</arg_defval>
      </constraint>
+     <constraint sense="true">
+      <driver>epl6200l</driver>
+      <arg_defval>ev/1000</arg_defval>
+     </constraint>
   </constraints>
   <enum_vals>
    <enum_val id="ev/1000">
