@@ -1,0 +1,47 @@
+<printer id="printer/Epson-EPL-6200L">
+  <make>Epson</make>
+  <model>EPL-6200L</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>Separate photoconductor drum and toner cartridge</en>
+      </comments>
+      <!--one or more "partno" elements.-->
+    </consumables>
+  </mechanism>
+  <url>http://www.epson.co.uk/sohoprod/printers/lasers/epl6100l/</url>
+  <lang>
+    <proprietary/>
+  <!--no pjl--><!--No "text"?--></lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>B</functionality>
+  <driver>epl6100l</driver>
+  <!--verified--><!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    Known not to use a standard protocol as PostScript or PCL; not to
+    be confused with the &lt;a
+    href=&quot;show_printer.cgi?recnum=Epson-EPL-6100&quot;&gt;EPL-6100&lt;/a&gt;.
+    &lt;p&gt;
+
+    Dr H. T. Leung and Roberto Ragusa have developed a &lt;a
+    href=&quot;http://epsonepl.sourceforge.net/&quot;&gt;driver&lt;/a&gt;;
+    based on reverse-engineering of the printer&apos;s protocol.&lt;p&gt;
+
+    The printer has parallel and USB connectors.&lt;p&gt;
+
+    This printer probably works with this driver but was not fully tested
+    yet. Any test report is welcome.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
