@@ -33,7 +33,7 @@ Example:
    ps2epl.pl myfile.ps /dev/null model=EPL5700L flowcontrol=/dev/usb/lp0
 
 Available options:
-   model        = EPL5700L, EPL5800L, EPL5900L, EPL6100L
+   model        = EPL5700L, EPL5800L, EPL5900L, EPL6100L, EPL6200L
    papersize    = a4, letter, (anything that ghostscript accepts)
 
    dpi          = 300, Class300, 600, Class1200
